[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "pytelegrambotapi>=4.28.0",
    "requests>=2.32.4",
    "Pillow>=10.3.0"         # ✅ Thêm dòng này
]
